feat(balance) add endpoint to work with users balance
